--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -280,8 +280,8 @@ on post-fs-data
     # Set indication (checked by vold) that we have finished this action
     #setprop vold.post_fs_data_done 1
 
-    # Include extra init file with omni extras
-    import /init.omni.rc
+    # Include extra init file with mantoui extras form omnirom
+    import /init.mantoui.rc
 
 on boot
 # basic network init
